--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -6,6 +6,7 @@ body {
     background-color:#333;
     opacity: 0.8;
     padding:15px;
+    overflow: hidden;
 }
 
 .footer{
@@ -19,12 +20,14 @@ body {
     margin:auto;
     width:1000px;
     border:3px solid lightpink;
+    overflow: auto;
 }
 
 .inner-body{
     height:100%;
     width:100%;
     background:white;
+    padding: 20px;
     opacity: 0.95;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
