--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -45,10 +45,14 @@ table {
 }
 
 .cart > tbody > tr:nth-child(even) {
-    background-color: lightseagreen;
+    background-color: #4CAF50;
 }
 
 .cart > tbody > tr > td {
+     padding:5px;
+ }
+
+.ncart > tbody > tr > td {
     padding:5px;
 }
 
