Hej sokoly, omijajcie gory lasy doly

--- a/src/main/webapp/css/stylesheet.css
+++ b/src/main/webapp/css/stylesheet.css
@@ -64,7 +64,7 @@ table {
 }
 
 .item{
-    border: 1px solid silver; width:306px;vertical-align: text-top;background:white;float:left;margin-left:6px;margin-right:6px;margin-bottom:12px;
+    border: 1px solid silver; height:200px; width:306px;vertical-align: text-top;background:white;float:left;margin-left:6px;margin-right:6px;margin-bottom:12px;
 }
 
 .container{
